--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+    //Servlets
+    implementation 'javax.servlet:javax.servlet-api:4.0.0'
+    //Thymeleaf
+    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+    //JUnit
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
