--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation 'javax.servlet:javax.servlet-api:4.0.0'
     //Thymeleaf
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
     //JUnit
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
