--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
     //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
+    //Plotly
+    implementation 'org.jfree:jfreechart:1.5.4'
     //JUnit
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
