--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,18 @@
          version="4.0">
     <context-param>
         <param-name>upload_dir</param-name>
-        <param-value>/homes/ltennapel/Documents/Thema_10/Project/ThemaOpdracht10/temp_test/</param-value>
+        <param-value>C:\Users\btnap\OneDrive - Hanzehogeschool Groningen\Documents\School\Thema_10\ThemaOpdracht10\temp_test\</param-value>
     </context-param>
 
     <context-param>
         <param-name>extracted_dir</param-name>
-        <param-value>/homes/ltennapel/Documents/Thema_10/Project/ThemaOpdracht10/temp_test/extracted/</param-value>
+        <param-value>C:\Users\btnap\OneDrive - Hanzehogeschool Groningen\Documents\School\Thema_10\ThemaOpdracht10\temp_test\extracted\</param-value>
     </context-param>
+    
+    <servlet-mapping>
+        <servlet-name>HomeServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>FilePageServlet</servlet-name>
@@ -20,10 +25,6 @@
     <servlet>
         <servlet-name>FilePageServlet</servlet-name>
         <servlet-class>nl.bioinf.bitbybit.servlets.FilePageServlet</servlet-class>
-        <init-param>
-            <param-name>upload_dir</param-name>
-            <param-value>/homes/ltennapel/Documents/Thema_10/Project/ThemaOpdracht10/temp_test/</param-value>
-        </init-param>
         <multipart-config>
             <location>/tmp</location>
             <!-- all in bytes -->
